# MyStreamer

./: .gitmodules  CMakeLists.txt  readme.md
.github/workflows/: main.yml
app/: CMakeLists.txt  main.cpp
docker/: docker-compose.yml
docker/cicd-gstreamer/: Dockerfile
docker/linux-ubuntu2204/: Dockerfile
scripts/: run-build-docker.bash  run-build-linux.bash
src/: message.cpp
tests/perf/: message_perf.cpp
tests/unit/: message_tests.cpp
